removed id pass

--- a/INSTABOT 2.ipynb
+++ b/INSTABOT 2.ipynb
@@ -36,7 +36,7 @@
     "#username input\n",
     "user = driver.find_element(By.NAME, 'username')\n",
     "user.click()\n",
-    "user.send_keys('tempsingh5')\n",
+    "user.send_keys('_________')\n",
     "user.submit()\n",
     "time.sleep(3)"
    ]
@@ -53,6 +53,16 @@
     "pass_word.click()\n",
     "time.sleep(3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2de040521e6e8fb3"
   },
   {
    "cell_type": "code",
